Fix UI on Mobile Search

--- a/frontend/web/less/desktop/search.less
+++ b/frontend/web/less/desktop/search.less
@@ -52,7 +52,7 @@
 			.title{
 				width: 100%;
 				float: left;
-				border: 1px solid #1b1b1b;
+				// border: 1px solid #1b1b1b;
 				background: #4a4c4e;
 				font-size: 16px;
 				color: #fff;
@@ -156,13 +156,14 @@
 						height: 30px;
 						float: left;
 						border-bottom: 1px solid #e3e3e3;
+						background: #fcfcfc;
 						.topic-name{
 							width: 70%;
 							float: left;
 							margin:5px 0 5px 10px;
 							font-size: 16px;
 							color: #1d1b1b;
-							font-family: 'ProximaNovaSemibold;';
+							font-family: 'ProximaNovaSemibold';
 						}
 						.count-post{
 							width: 20%;
@@ -195,7 +196,6 @@
 						height: 30px;
 						float: left;
 						border-bottom: 1px solid #e3e3e3;
-						background: #fcfcfc;
 						.netwrk-name{
 							width: 80%;
 							float: left;
